--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lodash": "^4.17.21",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "leader-line": "^1.0.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.2",
